WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
268646
[WGSL] shader,validation,decl,ptr_spelling:* is failing
https://bugs.webkit.org/show_bug.cgi?id=268646
Summary
[WGSL] shader,validation,decl,ptr_spelling:* is failing
Tadeu Zagallo
Reported
2024-02-02 11:31:08 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-02-02 11:31:36 PST
<
rdar://problem/122197533
>
Tadeu Zagallo
Comment 2
2024-02-02 11:32:36 PST
Pull request:
https://github.com/WebKit/WebKit/pull/23765
EWS
Comment 3
2024-02-05 06:11:23 PST
Committed
274094@main
(e6b8fd3541ab): <
https://commits.webkit.org/274094@main
> Reviewed commits have been landed. Closing PR #23765 and removing active labels.
Anna Lime
Comment 4
2024-10-07 00:08:35 PDT
There was a lot of useful information in the post, which helped me learn more.
https://escaperoadgame.io/
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug