[WGSL] shader,validation,decl,ptr_spelling:* is failing https://bugs.webkit.org/show_bug.cgi?id=268646 rdar://122197533

Reviewed by Mike Wyrzykowski.

Add the extra validation to ptr types to pass the tests.

* Source/WebGPU/WGSL/TypeCheck.cpp:
(WGSL::TypeChecker::TypeChecker):
(WGSL::TypeChecker::visit):
* Source/WebGPU/WGSL/Types.cpp:
(WGSL::Type::isStorable const):
(WGSL::Type::containsRuntimeArray const):
* Source/WebGPU/WGSL/Types.h:

Canonical link: https://commits.webkit.org/274094@main